[AC] Memory leak in GraphicsSurfacePrivate::findFBConfigWithAlpha() https://bugs.webkit.org/show_bug.cgi?id=105770

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-01-02
Reviewed by Noam Rosenthal.

Free the memory returned by glXGetVisualFromFBConfig() using
XFree to avoid a memory leak.

No new tests. No change in behavior.

* platform/graphics/surfaces/glx/GraphicsSurfaceGLX.cpp:
(WebCore::GraphicsSurfacePrivate::findFBConfigWithAlpha):

Canonical link: https://commits.webkit.org/124098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138614 268f45cc-cd09-0410-ab3c-d52691b4dbfc